--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Langford\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/home/langford/Android/Sdk
+flutter.sdk=/home/langford/sdks/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
